--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
 }
 
 iframe {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   bottom: 0;
   left: 0;
